--- a/distro.yml
+++ b/distro.yml
@@ -7,4 +7,9 @@
     with_items: 
     - "{{ ansible_distribution }}"
     - "{{ ansible_distribution_version }}"
-    - "{{ ansible_distribution_major_version }}"
+    
+  - name: use command to pull version
+    command: '/usr/bin/rpm -qa custom-rpm --queryformat %{VERSION}'
+    register: version
+    ignore_warnings: True
+    changed_when: False
